@@ -163,7 +163,7 @@ class APIManager(object):
     def create_api(self, model, methods=READONLY_METHODS, url_prefix='/api',
                    collection_name=None, allow_patch_many=False,
                    allow_functions=False, authentication_required_for=None,
-                   authentication_function=None):
+                   authentication_function=None, include_columns=None):
         """Creates a ReSTful API interface as a blueprint and registers it on
         the :class:`flask.Flask` application specified in the constructor to
         this class.
@@ -237,6 +237,15 @@ class APIManager(object):
         returns ``True`` if and only if a client is authorized to make a
         request on an endpoint.
 
+        `include_columns` is a list of strings which name the columns of
+        `model` which will be included in the JSON representation of that model
+        provided in response to :http:method:`get` requests. Only the named
+        columns will be included. If this list includes a string which does not
+        name a column in `model`, it will be ignored.
+
+        .. versionadded:: 0.5
+           Added the `include_columns` keyword argument.
+
         .. versionadded:: 0.4
            Added the `authentication_required_for` keyword argument.
 
@@ -280,7 +289,7 @@ class APIManager(object):
         # the view function for the API for this model
         api_view = API.as_view(apiname, self.db.session, model,
                                authentication_required_for,
-                               authentication_function)
+                               authentication_function, include_columns)
         # suffix an integer to apiname according to already existing blueprints
         blueprintname = self._next_blueprint_name(apiname)
         # add the URL rules to the blueprint: the first is for methods on the
