@@ -13,6 +13,9 @@ Version 0.5
 
 Not yet released.
 
+- Added `include_columns` keyword argument to
+  :meth:`~flask_restless.APIManager.create_api` method to allow users to
+  specify which columns of the model are exposed in the API.
 - Replaced Elixir with Flask-SQLAlchemy. Flask-Restless now only supports
   Flask-SQLAlchemy.
 
